--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header {
 
 section.viagem {
     height: 570px;
-    background-image: url("../imagens/london.jpg");
+    background-image: url("../img/london.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
